...
            if recordingListIsEmpty(), let recordingListId = recordingListId {
                try persistenceController.deleteRecordingList(id: recordingListId)
            }
            try persistenceController.saveRecordingList(recordingList)
            try persistenceController.loadRecordingList(id: recordingList.id)
        } catch {
            return
        }
    }
    
    func otherRecordingLists() -> [RecordingList] {
        return persistenceController.fetchRecordingLists().filter {
            $0.id != recordingListId
...
